# rust-web-crawler

./: Cargo.toml
docs/: key_requirements.md  problem_statement.md  scope.md
src/: main.rs
