[package]
name = "rust-web-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
redis = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
robotstxt = "0.3.0"
rusqlite = "0.33.0"
scraper = "0.23.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
url = "2.5.4"
